# pico-zkvm-vcaas

./: Cargo.toml  Dockerfile  README.md  foundry.toml  remappings.txt
contracts/src/: ProgramRegistry.sol
pico-coprocessor-service-bin/: Cargo.toml  build.rs
pico-coprocessor-service-bin/src/: main.rs
pico-coprocessor-service-lib/: Cargo.toml
pico-coprocessor-service-lib/src/: context.rs  errors.rs  evm.rs  lib.rs  pico.rs  program.rs  types.rs
pico-coprocessor-service-lib/src/jobs/: coprocessor.rs  generate_proof.rs  mod.rs
pico-coprocessor-service-lib/src/tests/: e2e.rs  mod.rs  vm.rs
pico-coprocessor-service-lib/tests/: e2e.rs
trading-volume-example/: README.md
trading-volume-example/app/: Cargo.toml  pico.save
trading-volume-example/app/src/: main.rs
trading-volume-example/lib/: Cargo.toml
trading-volume-example/lib/src/: lib.rs
trading-volume-example/requests/: Cargo.toml
trading-volume-example/requests/inputs/: request_prove_inputs.json
trading-volume-example/requests/src/: main.rs
