[package]
name = "pico-coprocessor-service-blueprint-lib"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["evm", "std", "tangle", "macros"] }
tokio = { workspace = true, features = ["sync"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
coprocessor-sdk = { workspace = true }
pico-sdk = { workspace = true, features = ["coprocessor"] }
pico-vm = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
tempfile.workspace = true
rand = { workspace = true }
parity-scale-codec = { workspace = true }

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "tangle"] }
tokio = { workspace = true, features = ["macros"] }
color-eyre = { workspace = true }

[package.metadata.blueprint]
manager = { Evm = "ExperimentalBlueprint" }
master_revision = "Latest"
